--- a/style.css
+++ b/style.css
@@ -1,18 +1,238 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins';
     text-decoration: none;
     list-style: none;
-  
+
 }
 
-:root{
-    --body:#f2f0ee;
-    --white:#fff;
-    --black:#111;
-    --text-black:#333;
+:root {
+    --body: #f2f0ee;
+    --white: #fff;
+    --black: #000;
+    --text-color: #4a4a4a;
+
+}
+
+body.dark {
+    --body: #000;
+    --white: #0f0f0f;
+    --black: #fff;
+    --text-black: #d1d1d1;
+}
+
+body {
+    background-color: var(--white);
+    color: var(--text-color);
+    transition: 0.3s ease-in-out;
+}
+
+/* Hero Section */
+
+.bg-section {
+    width: 100%;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+}
+
+.hero-header {
+    height: 90vh;
+}
+
+.hero-header:after {
+    border-bottom-left-radius: 200px;
+    border-bottom-right-radius: 200px;
+
+}
+
+.bg-section:after {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url(/Images/white-abstract-texture-background.jpg);
+    background-size: contain;
+    opacity: 0.3;
+    pointer-events: none;
+    z-index: -1;
+}
+
+.dark .bg-section:after {
+    opacity: 0.2;
+}
+
+.bg-section::before {
+    content: '';
+    position: absolute;
+    top: 0%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /* background-color: var(--white);*/
+    z-index: -1;
+}
+
+/*Navigation*/
+
+nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1% 12%;
+}
+
+.logo {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.logo h1 {
+    font-size: 1rem;
+    font-weight: 500;
+    color: var(--text-color);
+}
+
+.logo button {
+    background-color: #fff;
+    padding: 8px 25px;
+    border-radius: 50px;
+    border: none;
+    box-shadow: 0 0 5px #d1d0d0;
+    transition: .3s;
+    cursor: pointer;
+}
+
+.logo button:hover {
+    background-color: #000;
+    color: #fff;
+}
+
+.menu {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.menu li a {
+    font-size: 1rem;
+    color: var(--text-color);
+}
+
+.menu li:hover a {
+    color: var(--black);
+}
+
+.menu-icon {
+    opacity: 0;
+}
+
+.mode i {
+    width: 40px;
+    height: 40px;
+    border: 1px solid rgba(131, 131, 131, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50px;
+    background-color: var(--black);
+    color: var(--white);
+    transition: .3s;
+}
+
+.mode i:hover {
+    background-color: var(--white);
+    color: var(--black);
+
+}
+
+.menu-icons-wrap {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.menu-icons-wrap .mode {
+    opacity: 0;
+}
+
+/* Hero main */
+
+main {
+    width: 100%;
+    height: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+main .user-image {
+    width: 200px;
+    height: 200px;
+    border-radius: 100%;
+    overflow: hidden;
+    border: 5px solid #fff
+}
+
+main .user-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+main .hero-img {
+    position: relative;
+}
+
+main .hero-img h2 {
+    position: absolute;
+    top: 20%;
+    right: -65%;
+    background-color: var(--white);
+    color: var(--black);
+    padding: 5px 20px;
+    border-radius: 50px;
+    font-size: 1rem;
+    font-weight: 600;
+    animation: floatBubble 4s ease-in-out infinite;
+    /* box-shadow: 0 0 10px #d1d0d0; */
+}
+
+main .hero-img h2:last-child {
+    top: 50%;
+    right: -85%;
+    animation-delay: 1s;
+}
+
+@keyframes floatBubble {
+    0% {
+        transform: translate(0, 0);
+    }
+
+    25% {
+        transform: translate(5px, -6px);
+    }
+
+    25% {
+        transform: translate(-5px, 4);
+    }
+
+    75% {
+        transform: translate(3px, -3px);
+    }
+
+    100% {
+        transform: translate(0, 0);
+    }
 }
