--- a/style.css
+++ b/style.css
@@ -236,3 +236,83 @@ main .hero-img h2:last-child {
         transform: translate(0, 0);
     }
 }
+
+.hero-content {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.hero-content h1 {
+    font-size: 4rem;
+    line-height: 4.5rem;
+    font-weight: 500;
+    text-align: center;
+    width: 80%;
+    margin: 20px 0;
+}
+
+.hero-content button {
+    background-color: var(--black);
+    color: var(--white);
+    padding: 15px 40px;
+    border: none;
+    border-radius: 50px;
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.hero-content button:hover {
+    background-color: var(--white);
+    color: var(--black);
+    box-shadow: 0 0 10px #d1d0d0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* MQ Section */
+@media (max-width: 1300px) {
+    .hero-content{
+        width: 70%;
+    }
+    main{
+        height: 90%;
+    }
+   
+}
+
+@media (max-width: 768px) {
+    nav{
+        padding: 10% 12%;
+        background-color: #fff;
+        position: relative;
+    }
+
+    .logo h1{
+        color: #000;
+    }
+    
+    .menu-icon{
+        display: block;
+        z-index: 9999;
+        width: 50px;
+        height: 50px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+}
